log
Tue 02 May 2023 08:46:34 PM UTC: 
 tests:  0|5
total_score: 0/70
1c4aa38
Thu 04 May 2023 10:27:44 PM UTC: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  0|5
total_score: 0/70
3f7f8dd
Thu 04 May 2023 10:33:02 PM UTC: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
3273183
Fri 05 May 2023 06:32:13 PM UTC: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  2|4
total_score: 15/70
ac0f5c3
Fri 05 May 2023 07:01:08 PM UTC: 
 sudoku.c | 32 ++++++++++++++++++++++++++------
 1 file changed, 26 insertions(+), 6 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:54:11: error: unused variable ‘arraySub’ [-Werror=unused-variable]
   54 |       int arraySub[10];
      |           ^~~~~~~~
sudoku.c:53:11: error: unused variable ‘arrayCol’ [-Werror=unused-variable]
   53 |       int arrayCol[10];
      |           ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
eff722a
Fri 05 May 2023 07:01:22 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:54:11: error: unused variable ‘arraySub’ [-Werror=unused-variable]
   54 |       int arraySub[10];
      |           ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
aa31f10
Fri 05 May 2023 07:01:29 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
ad0007d
Fri 05 May 2023 07:09:53 PM UTC: 
 sudoku.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
622b12e
Fri 05 May 2023 07:13:48 PM UTC: 
 sudoku.c | 12 +++---------
 1 file changed, 3 insertions(+), 9 deletions(-)
 tests:  2|4
total_score: 15/70
b1ce3df
Fri 05 May 2023 07:19:36 PM UTC: 
 sudoku.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
f1a50d7
Fri 05 May 2023 07:22:12 PM UTC: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:74:19: error: unused variable ‘j’ [-Werror=unused-variable]
   74 |               int j=3*(f%3) + (c%3) ;
      |                   ^
sudoku.c:73:19: error: unused variable ‘i’ [-Werror=unused-variable]
   73 |               int i=3*(f/3) + (c/3) ;
      |                   ^
sudoku.c:54:11: error: unused variable ‘arraySub’ [-Werror=unused-variable]
   54 |       int arraySub[10]={0};
      |           ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
09a3d5e
Fri 05 May 2023 07:26:09 PM UTC: 
 sudoku.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  6|2
total_score: 45/70
8b5874e
Sat 06 May 2023 06:25:14 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
f88f46c
Sat 06 May 2023 06:25:46 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
84d66e5
